feat: added messages and notifications
