# app/Http/Resources/MessageResource.php
@@ -1,0 +1,22 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class MessageResource extends JsonResource
+{
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            'order_id' => $this->order_id,
+            'content' => $this->content,
+            'sender' => new UserResource($this->sender),
+            'receiver' => new UserResource($this->receiver),
+            'is_read' => $this->is_read,
+            'read_at' => $this->read_at,
+            'created_at' => $this->created_at,
+        ];
+    }
+}
