# app/OpenApi/Schemas/ErrorSchema.php
@@ -12,5 +12,21 @@ namespace App\OpenApi\Schemas;
  *         example="Error message"
  *     )
  * )
+ *
+ *
+ * @OA\Schema(
+ *     schema="ValidationError",
+ *     type="object",
+ *     @OA\Property(property="message", type="string"),
+ *     @OA\Property(property="errors", type="object")
+ * )
+ *
+ *
+ * @OA\Schema(
+ *     schema="NotFoundError",
+ *     type="object",
+ *     @OA\Property(property="message", type="string", example="Resource not found")
+ * )
  */
-class ErrorSchema {}
+
+ class ErrorSchema {}
